@@ -1,5 +1,6 @@
 package com.individual.messenger.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -13,74 +14,51 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.*;
-
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableMethodSecurity // (기존 EnableGlobalMethodSecurity 대체)
+@EnableMethodSecurity
 public class SecurityConfig {
-
-    // JWT 필터가 있다면 주입
-    private final JwtAuthFilter jwtFilter; // 없다면 이 필드/생성자/등록 라인 제거
-    public SecurityConfig(JwtAuthFilter jwtFilter) { this.jwtFilter = jwtFilter; }
-
+    private final JwtAuthFilter jwtFilter;
+    private final String[] allowedOrigins;
+    public SecurityConfig(JwtAuthFilter jwtFilter,
+            @Value("${app.allowed-origins:http://localhost:8080,http://127.0.0.1:8080}") String[] allowedOrigins) {
+        this.jwtFilter = jwtFilter;
+        this.allowedOrigins = allowedOrigins;
+    }
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(csrf -> csrf.disable())
-                .cors(Customizer.withDefaults())
+        http.csrf(csrf -> csrf.disable()).cors(Customizer.withDefaults())
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling(e -> e
-                        .authenticationEntryPoint(new ApiAuthEntryPoint())
-                        .accessDeniedHandler(new ApiAccessDeniedHandler())
-                )
+                .exceptionHandling(e -> e.authenticationEntryPoint(new ApiAuthEntryPoint())
+                        .accessDeniedHandler(new ApiAccessDeniedHandler()))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                        // 로그인/회원가입/정적/WS
-                        .requestMatchers("/login", "/register", "/api/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/auth/login", "/api/auth/register").permitAll()
+                        .requestMatchers("/login", "/register", "/error").permitAll()
                         .requestMatchers("/js/**", "/css/**", "/images/**", "/favicon.ico", "/webjars/**").permitAll()
                         .requestMatchers("/ws-stomp/**").permitAll()
-
-                        // ✅ HTML 뷰들은 열어둠 (초기 로딩용)
-                        .requestMatchers("/", "/home", "/rooms", "/friends", "/chat/**").permitAll()
-
-                        // ✅ 데이터 API만 보호
-                        .requestMatchers("/api/**").authenticated()
-
-                        .anyRequest().authenticated()
-                )
-                .httpBasic(b -> b.disable())
-                .formLogin(b -> b.disable());
-
+                        .requestMatchers("/", "/home", "/rooms", "/friends", "/chat/**", "/servers").permitAll()
+                        .anyRequest().authenticated())
+                .httpBasic(b -> b.disable()).formLogin(b -> b.disable());
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
-
-    // CORS 설정
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOriginPatterns(List.of("*"));
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
-        cfg.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
-        src.registerCorsConfiguration("/**", cfg);
-        return src;
+        cfg.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        cfg.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        cfg.setAllowCredentials(false);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", cfg);
+        return source;
     }
-
-    // 비밀번호 인코더
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    // (필요 시) AuthenticationManager 주입이 필요한 경우
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
+    @Bean public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
+    @Bean public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
         return cfg.getAuthenticationManager();
     }
 }
